--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/unity_game.loader.js";
+      var loaderUrl = buildUrl + "/real_unity.loader.js";
       var config = {
         arguments: [],
-        dataUrl: buildUrl + "/unity_game.data.br",
-        frameworkUrl: buildUrl + "/unity_game.framework.js.br",
-        codeUrl: buildUrl + "/unity_game.wasm.br",
+        dataUrl: buildUrl + "/real_unity.data.unityweb",
+        frameworkUrl: buildUrl + "/real_unity.framework.js.unityweb",
+        codeUrl: buildUrl + "/real_unity.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "farm_dapp",
